<resources>
    <string name="app_name">Virtual Cabinet</string>
    <string name="drawers">Drawers</string>
    <string name="add_clothes">Add Clothes</string>
    <string name="clothes_image">Clothes Image</string>
    <string name="wearing_location">Wearing Location</string>
    <string name="clothes_type">Type</string>
    <string name="clothes_color">Color</string>
    <string name="clothes_pattern">Clothes Pattern</string>
    <string name="updated">%1$s updated</string>
    <string name="removed">%1$s removed</string>
    <string name="clothes_count">Clothes\n %1$d</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="price">Price</string>
    <string name="wearing_location_2">Wearing Location:</string>
    <string name="clothes_type_2">Type:</string>
    <string name="clothes_color_2">Color:</string>
    <string name="clothes_pattern_2">Clothes Pattern:</string>
    <string name="purchase_date_2">Purchase Date:</string>
    <string name="price_2">Price:</string>
    <string name="save">Save</string>
    <string name="drawer_name">Drawer Name</string>
    <string name="top_head">Top Head</string>
    <string name="face">Face</string>
    <string name="body_upper">Upper Body</string>
    <string name="body_lower">Lower Body</string>
    <string name="feet">Feet</string>
    <string name="top_head_title">Top Head:</string>
    <string name="face_title">Face:</string>
    <string name="body_upper_title">Upper Body:</string>
    <string name="body_lower_title">Lower Body:</string>
    <string name="feet_title">Feet:</string>
    <string-array name="wearing_place">
        <item name="top_head">Top Head</item>
        <item name="face">Face</item>
        <item name="body_upper">Upper Body</item>
        <item name="body_lower">Lower Body</item>
        <item name="feet">Feet</item>
    </string-array>
    <string name="clothes">Clothes</string>
    <string name="add_drawer">Add Drawer</string>
    <string name="added_successfully">added successfully</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="combine">Combine</string>
    <string name="title_activity_maps">Map</string>
    <string name="alert">Warning!</string>
    <string name="are_you_sure_drawer_delete">This drawer and all the clothes in it will be deleted. Are you sure?</string>
    <string name="are_you_sure_clothes_delete">This clothes will be removed from everywhere. Are you sure?</string>
    <string name="are_you_sure_combine_delete">This combine will be removed. Are you sure?</string>
    <string name="are_you_sure_activity_delete">This activity will be removed. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_color_picker">Select Color</string>
    <string name="please_enter_a_drawer_name">Please enter a drawer name</string>
    <string name="you_must_select_at_least_2_items">You must select at least two items</string>
    <string name="this_combine_name_already_exists">This combine name already exists</string>
    <string name="cant_get_location_information">Can\'t get any location information for selected place please try again</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_type">Activity Type</string>
    <string name="activity_combine">Activity Combine</string>
    <string name="select_a_combine">Select a combine</string>
    <string name="activity_date">Activity Date</string>
    <string name="activity_location">Activity Location</string>
    <string name="combine_name">Combine Name</string>
    <string name="combine_image">Combine Image</string>
    <string name="add_combine">Add Combine</string>
    <string name="share">Share</string>
    <string name="set_location">Set Location</string>
    <string name="activities">Activities</string>
    <string name="dressing_room">Dressing Room</string>
    <string name="delete">Delete</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="add_new_clothes">Add New Clothes</string>
    <string name="add_new_drawer">Add New Drawer</string>
    <string name="add_new_combine">Add New Combine</string>
    <string name="combines">Combines</string>
    <string name="select_a_location">Select a Location</string>
    <string name="connection_successful">Connection Successful</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="charger_connected">Charger Connected</string>
    <string name="charger_disconnected">Charger Disconnected</string>
    <string name="start_backup">Start Backup</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="are_you_sure_restore">The items that are not in the database will be lost. Are you sure?</string>
    <string name="are_you_sure_backup">The items in the database will be reset. Are you sure?</string>
    <string name="are_you_sure_clear">All data on the device will be deleted. Are you sure?</string>
    <string name="backup_started">Backup Started</string>
    <string name="backup_finished">Backup Finished</string>
    <string name="restore_started">Restore Started</string>
    <string name="cleaning_started">Cleaning Started</string>
    <string name="current_location">You\'re Here</string>
</resources>