<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".AddDrawerActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addDrawerConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/brown"
        android:layout_gravity="center">


        <EditText
            android:id="@+id/addDrawerName"
            style="@style/EditTextStyle"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:autofillHints="firstname"
            android:ems="10"
            android:hint="@string/drawer_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addDrawerListClothes"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:onClick="listClothes"
            style="@style/AppTheme.Button"
            android:text="@string/clothes"
            app:layout_constraintStart_toStartOf="@+id/addDrawerName"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:onClick="selectColor"
            style="@style/AppTheme.Button"
            android:text="@string/clothes_color"
            app:layout_constraintEnd_toEndOf="@+id/addDrawerName"
            app:layout_constraintTop_toBottomOf="@+id/addDrawerName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="92dp"
            android:onClick="saveDrawer"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDrawerName" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="360dp"
            android:layout_height="325dp"
            style="@style/Tray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/drawers" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>


